--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# suppress inspection "UnusedProperty" for whole file
 spring.application.name=spring-security-template
+
+# Spring security
+spring.security.user.name=evansp
+spring.security.user.password=evansp
